fix: fix links overlaping in developer section

--- a/src/pages/Welcome/Welcome.module.css
+++ b/src/pages/Welcome/Welcome.module.css
@@ -1,11 +1,9 @@
 .welcome_container {
-  margin-top: 2rem;
   padding: 0 1rem;
-  max-width: 1240px;
+  width: 100%;
 }
 
 .team_title {
-  margin-top: 1rem;
   font-size: 4rem;
   font-weight: bold;
   text-align: center;
@@ -15,7 +13,7 @@
   margin-top: 3rem;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
   gap: 3rem;
 }
 
@@ -24,8 +22,13 @@
   justify-content: center;
 }
 
+.developer {
+  width: 100%;
+}
+
 .photo {
-  max-width: 100%;
+  display: block;
+  width: 100%;
   height: auto;
   border-radius: 1rem;
 }
